# Tokio_vs_Actix_Actors

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.logs/: concurrency_model_testing.log.2024-01-15-15-50  concurrency_model_testing.log.2024-01-15-18-49  concurrency_model_testing.log.2024-01-15-18-50  log_testing.log.2024-01-15-15-10  log_testing.log.2024-01-15-15-11  log_testing.log.2024-01-15-15-12  log_testing.log.2024-01-15-15-15  log_testing.log.2024-01-15-15-16  log_testing.log.2024-01-15-15-17  log_testing.log.2024-01-15-15-18  log_testing.log.2024-01-15-15-19  log_testing.log.2024-01-15-15-24  log_testing.log.2024-01-15-15-25  log_testing.log.2024-01-15-15-34  log_testing.log.2024-01-15-15-35
migrations/2024-01-16-184136_TradesTypes/: up.sql
migrations/2024-01-16-184513_OrderBookTypes/: matching_engine_load_testing  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  types.rs  utils.rs
src/client/: mod.rs  ws.rs  ws_types.rs
src/concurrency_setup/: actix_actor_model.rs  actor_model.rs  kompact_hybrid_model.rs  mod.rs  tokio_actor_model.rs
src/diesel/migrations/2024-01-16-163948_create_posts/: up.sql
