[package]
name = "ob_stream_concurrency_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
crossbeam = "0.8.4"
actix = "0.13.1"
actix-rt = "2.9.0"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }

serde = {version = "1.0.186", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.70"
tungstenite = { version = "0.20.0", features = ["native-tls"]}
chrono = "0.4.31"
reqwest = {version = "0.11.23", features = ["json"]}
serde_derive = "1.0.195"
once_cell = "1.19.0"
url = "2.5.0"
sha2 = "0.10.8"
simple_logger = "4.3.3"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-flame = "0.2.0"
async-trait = "0.1.77"
dotenvy = "0.15.7"
diesel = { version = "2.1.4", features = ["postgres", "serde_json", "r2d2"] }
flume = "0.11.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
crossterm = "0.27.0"
kompact = "0.11.2"
csv = "1.3.0"

